The future looks like I

--- a/content/post/mental-health-redux.Rmd
+++ b/content/post/mental-health-redux.Rmd
@@ -122,9 +122,18 @@ I have to remind myself that wellness is a process. I'm struggling now, but
 there is hope. I've surrounded myself with living things[^things], and my 
 family is close at hand. (write some more stuff about what health looks like here)
 
+## The Future
+
+My counselor reminds me often that thoughts create reality. Words are thoughts pinned in space-time 
+by sound or text. I want to create a reality of health, so here's what that looks like.
+My "quietly confident"[^quiet] mind generates new ideas and readily produces clear descriptions of 
+those ideas. I get through an 8 hour day with energy and motivation to spare. I have the willpower to 
+exercise daily. 
+
 [^twitch]: These are sharp, sudden spasms of a majority of muscles in my upper body.
 They are particularly likely when I bump into something or someone touches me, but
-happen all the time. 
+happened all the time. Involuntary twitching is normal right before sleep, or occasionally when 
+awake, but frequent twitches are a sign something is off.
 
 [^antipsychotic]: My GP took pains to point out that I wasn't psychotic! 
 
@@ -133,3 +142,4 @@ block too much light to grow plants indoors. I plan to start some outdoor herb
 planters as the weather warms up. And there is always 
 [this critter](https://flic.kr/p/2ec3evR).
 
+[^quiet]: This phrase comes from the Headspace app I use for mindfulness meditation.
