the unreasonable effectiveness of counselling

--- a/content/post/mental-health-redux.Rmd
+++ b/content/post/mental-health-redux.Rmd
@@ -118,14 +118,21 @@ evaluate all my medication, hopeful that an
 effective combination with few side effects can be found. I was really tired of
 the merry-go-round. 
 
+One clear positive note in all this: counselling helps. One of the questions to diagnose
+depression is something to the effect of "Do you have thoughts of worthlessness". When 
+the nurses asked me this, I had to stop and think. I was amazed to realize the answer
+was no, none. Not one. That's the counselling. Unreasoned sadness, check. Suicidal 
+ideation, check. But I don't think I'm worthless. Medication plus counseling. It just works. 
+
 ## Current State and the Future
 
 I'm experiencing some fairly immediate improvements from a couple of medication changes. 
-I've often had short term gains followed by long term mediocrity, so the jury is still out. 
+But I've often had short term gains followed by long term mediocrity, so the jury is still out. 
 The changes are based on a genetic test which I'll write about elsewhere. But I'm 
 kind of excited. 
 
-My counselor reminds me often that thoughts create reality. Words are thoughts pinned in space-time 
+My counselor reminds me often that thoughts create reality. A friend reminded me that 
+words are thoughts pinned in space-time 
 by sound or text. I want to create a reality of health, so here's what that looks like.
 My "quietly confident"[^quiet] mind generates new ideas and readily produces clear descriptions of 
 those ideas. I get through an 8 hour day with energy and motivation to spare. 
@@ -136,7 +143,7 @@ do the things that advance my interests.
 
 Wellness is a process. I'm struggling now, but 
 on an upward path. I've surrounded myself with living things[^things], and my 
-family is close at hand.
+family is close at hand. I am hopeful.
 
 [^twitch]: These are sharp, sudden spasms of a majority of muscles in my upper body.
 They are particularly likely when I bump into something or someone touches me, but
