--- a/content/post/mental-health-redux.Rmd
+++ b/content/post/mental-health-redux.Rmd
@@ -29,7 +29,8 @@ such a safe place. I am also at a point in my career where I can remain
 successful even if some people choose not to work with me because of my 
 mental health issues, or my public stance on those issues. I expect I have
 lost research opportunities because of my previous post, and this one won't help.
-In many, maybe all, of these lost opportunities people want to be helpful, and not
+Many, maybe all, of these opportunities are lost because people want to be 
+helpful, and not
 add anything when I'm clearly already struggling. I'm OK with that; I've got 
 enough to do, and I need to say "No" a lot more.
 
