--- a/content/post/mental-health-redux.Rmd
+++ b/content/post/mental-health-redux.Rmd
@@ -18,35 +18,36 @@ It seems timely to revisit the topic.
 
 On the whole, telling people about my depression was a positive 
 experience. My colleagues were very supportive. 
-I made new friends as people reached out to have lunch and talk about science 
-fiction and cooking. I didn't hear any official reaction, but through the
+I made new friends as people reached out to have lunch and talk about mental health, science 
+fiction, and cooking. I didn't hear any official reaction, but through the
 grapevine came rumbles of my blog post triggering discussions in various student
-support groups throughout the university.
+support groups throughout the university. 
 
-Despite my positive experience, disclosure isn't the right move for everyone.
+Despite my positive experiences, disclosure isn't the right move for everyone.
 I am so lucky to be surrounded by nice people. But someone else may not be in 
 such a safe place. I am also at a point in my career where I can remain 
 successful even if some people choose not to work with me because of my 
-mental health issues, or my public stance on those issues. I expect I have
+mental health issues, or my public stance on those issues. I may have
 lost research opportunities because of my previous post, and this one won't help.
-Many, maybe all, of these opportunities are lost because people want to be 
-helpful, and not
-add anything when I'm clearly already struggling. I'm OK with that; I've got 
+I'm OK with that; I've got 
 enough to do, and I need to say "No" a lot more.
 
 One thing I didn't anticipate was the number of people who wanted to talk to me 
 about their mental health. I listened attentively, encouraged them to seek 
 professional help, and worked my butt off trying not to get attached to their 
 outcomes. I have a much greater appreciation for the work of therapists and 
-counselors now. One such meeting leaves me exhausted, head spinning with 
-questions about what I said, what should I have said, did I do enough. I'll still say 
+counselors now. After every meeting I wonder about what I said, what should I have said, did I do enough? I'll still say 
 yes every time I'm asked. 
 
 ## Creating an environment of access
 
-Last summer the Natural Resources Diversity Initiative invited me to lead a 
-discussion on mental health during fall semester. As I was feeling so much better, 
-sure! Great idea! It turned out great, but the week before I was an anxious wreck. 
+One of [the recommendations for improving mental health in Academia](http://tucollaborative.org/sdm_downloads/supportive-academic-environments-for-faculty-with-mental-illnesses/) is to create a 
+"culture of access". There are several components to this, but one piece is organizing 
+events that discuss mental disabilities as an expected and important area of faculty and
+student support. So when the Natural Resources Diversity Initiative invited me to lead a 
+discussion on mental health during fall semester, I thought it was great idea.
+I was feeling so much better, and it seemed doable. 
+It turned out great, but the week before I was an anxious wreck. 
 Normally when I speak in public I am an expert in the topic. My only 
 qualification was personal experience. 
 
@@ -70,20 +71,23 @@ activity. I told my story, did the exercise, and let the discussion flow after
 that. It went really well. 
 
 During the discussion one of my colleagues asked a great question to which I had 
-no answer. I still don't, but I've since realized the question itself reflects the
-stigma attached to mental health. Paraphrased, "What do we do when a student suffers 
-depression, and is unable to complete the work required by the funding agency?" 
+no answer. Paraphrased, "What do we do when a student suffers 
+depression, and is unable to complete the work required by the funding agency?"
+I've since realized the question itself reflects the
+stigma attached to mental health.  
 The answer is, the same thing you'd do if the student was diagnosed with cancer,
-or became pregnant! Mental illness isn't any different from a physical illness or condition
+or became pregnant! Mental disability isn't any different from a physical illness or condition
 that leaves a student unable to complete the work. In fact, with proper support and
 treatment, a mentally ill student may well be able to complete the work. The "proper 
 support" is where mental health professionals play a key role. 
 
+There is a lot of work left to do on improving the environment at UNL and academia generally.
+I will keep trying to do my part.
+
 ## Meltdown
 
-Last summer my colleague Leon was diagnosed with cancer. [ask leon if he is ok with this]
-[Joe Dauer](http://snr.unl.edu/aboutus/who/people/faculty-member.asp?pid=1921) and I took over 
-the Intro ecology course to allow Leon to focus on healing and recovery. I was doing well
+Last summer a colleague was diagnosed with cancer. [Joe Dauer](http://snr.unl.edu/aboutus/who/people/faculty-member.asp?pid=1921) and I took over 
+the Intro ecology course to allow our colleague to focus on healing and recovery. I was doing well
 and it seemed like a doable thing, co-teaching ecology and organizing the ecology lab at
 the same time. I was super-excited to teach
 with Joe, one of the educational research faculty at UNL. I expected to learn a lot. I wasn't 
@@ -101,7 +105,7 @@ once grades were in, the pressure came off, and my mood slipped day by day.
 The random crying jags struck about four days after I turned in
 my grades. On a whim, I stopped in to see John and update him on my plans for the 
 spring semester. What I didn't plan on was bursting into tears in his office.
-I left completely deflated, but with strict orders that I would
+I left with strict orders that I would
 not be teaching ecology lab or doing several other things this spring. 
 
 I arranged an emergency visit with my counselor. It was only five minutes into the 
@@ -144,7 +148,7 @@ do the things that advance my interests.
 
 Wellness is a process. I'm struggling now, but 
 on an upward path. I've surrounded myself with living things[^things], and my 
-family is close at hand. I am hopeful.
+family is close at hand. I am hopeful[^acknowledgment].
 
 [^twitch]: These are sharp, sudden spasms of a majority of muscles in my upper body.
 They are particularly likely when I bump into something or someone touches me, but
@@ -159,3 +163,5 @@ planters as the weather warms up. And there is always
 [this critter](https://flic.kr/p/2ec3evR).
 
 [^quiet]: This phrase comes from the Headspace app I use for mindfulness meditation.
+
+[^acknowledgement]: Kelly Helm-Smith and Peter Allman read early drafts of this post and it is immeasurably better as a result. 
