--- a/content/post/mental-health-redux.Rmd
+++ b/content/post/mental-health-redux.Rmd
@@ -36,7 +36,8 @@ One thing I didn't anticipate was the number of people who wanted to talk to me
 about their mental health. I listened attentively, encouraged them to seek 
 professional help, and worked my butt off trying not to get attached to their 
 outcomes. I have a much greater appreciation for the work of therapists and 
-counselors now. After every meeting I wonder about what I said, what should I have said, did I do enough? I'll still say 
+counselors now. After every meeting I wonder about what I said, what should 
+I have said, did I do enough? I'll still say 
 yes every time I'm asked. 
 
 ## Creating an environment of access
@@ -124,9 +125,9 @@ effective combination with few side effects can be found. I was really tired of
 the merry-go-round. 
 
 One clear positive note in all this: counselling helps. One of the questions to diagnose
-depression is something to the effect of "Do you have thoughts of worthlessness". When 
+depression is something to the effect of "Do you have thoughts of worthlessness?" When 
 the nurses asked me this, I had to stop and think. I was amazed to realize the answer
-was no, none. Not one. That's the counselling. Unreasoned sadness, check. Suicidal 
+was no, none. Not one. That's the counselling. Unreasonable sadness, check. Suicidal 
 ideation, check. But I don't think I'm worthless. Medication plus counseling. It just works. 
 
 ## Current State and the Future
