--- a/content/post/hunter-functional-response.Rmd
+++ b/content/post/hunter-functional-response.Rmd
@@ -41,4 +41,56 @@ p(nothing) = (1 - p(buck))(1-p(doe))
 $$
 
 Here I assume that if a doe and a buck are encountered, the hunter always takes
-the buck and ignores the doe. 
+the buck and ignores the doe. Also, if more than one buck or doe is encountered
+that's the same as encountering one.
+
+So this is a dynamic programming problem -- there are T intervals, and on each
+interval the decision is to take a doe or not. 
+
+$$
+V(t) = max(p(buck) + v_d p(doe) + V(t+1) p(nothing), \\
+           p(buck) + V(t+1)(p(doe) + p(nothing)))
+$$
+
+where $0 \leq v_d \leq 1$ is the relative value of a doe compared to a buck.
+
+```{r, echo = FALSE}
+library("tidyverse")
+lambda <-  0.01
+N <-  c(doe = 100, buck = 2)
+vd <-  0.1
+p_enc <- function(N, lambda){
+  c(pbuck = 1 - exp(-lambda*N[2]),
+    pdoe = (1 - exp(-lambda*N[1]))*(exp(-lambda*N[2])),
+    pnone = (exp(-lambda*N[1]))*(exp(-lambda*N[2])))
+    }
+V <- vector("numeric", length = 20)
+V1 <- vector("numeric", length = 20)
+V2 <- vector("numeric", length = 20)
+D <- vector("character", length = 20)
+p <- p_enc(N, lambda)
+V[20] <- V1[20] <- V2[20] <- p[2] + vd*p[1]
+D[20] <- "accept"
+
+for(t in 19:1){
+  V1[t] <- p[2] + vd*p[1] + p[3]*V[t+1]
+  V2[t] <- p[2] + V[t+1]*(p[1] + p[3])
+  if (V1[t] > V2[t]){
+    D[t] <- "accept"
+    V[t] <- V1[t]
+  } else {
+    D[t] <- "reject"
+    V[t] <- V2[t]
+  }
+}
+df <- bind_cols(t = 1:20, V = V, D = D, Accept = V1, Reject = V2) %>% 
+  gather(key = Choice, value = Value, 4:5)
+ggplot(data = df,
+       mapping = aes(x = t)) +
+  geom_line(mapping = aes(y = Value, linetype = Choice)) + 
+  labs(x = "Time", y = "Value", 
+       caption = "Expected value of rejecting (solid line) or accepting (dashed line) a doe.")
+```
+
+So that was unexpected, but clear once I look at the equation again. As long as
+$v_d > 0$, accepting will always 
