--- a/content/post/dominant-thoughts.Rmd
+++ b/content/post/dominant-thoughts.Rmd
@@ -3,7 +3,7 @@ title: "The unreasonable power of dominant thoughts"
 author: "Drew Tyre"
 date: '2019-03-25'
 output: html_document
-draft: yes
+draft: no
 slug: dominant-thoughts
 tags_include:
 - Mental Health
@@ -33,7 +33,7 @@ over". And bang, just like that I was back in the dark place I'd barely
 crawled out of a few weeks ago. I promptly crawled back out again, but it was a stark 
 reminder of what's waiting just off to the side. 
 
-Spilling all this stuff out in the open is the great thing about counciling. As I
+Spilling all this stuff out in the open is the great thing about counseling. As I
 reflected back on it all, I realized that I regarded all of it as failure. Failing
 at self-control. Failing at teaching. Failing at administrating. Once I made that
 observation, the revelations kept coming. I look at everything as a failure. Failing
@@ -41,5 +41,17 @@ as a friend, son, nephew, husband, father, advisor. Every project I've ever been
 responsible for, I regard as failed. 
 
 I don't treat anyone else like this. I praise people for their efforts, remind them
-that the perfect is the enemy of the good, just call it done! 
+that the perfect is the enemy of the good, just call it done! Time to start
+applying that approach to myself.
 
+## Postscript
+
+Actually this was a few months back, but after writing the bulk of the post
+I sort of took a bit of a social media/blogging hiatus. Still am, in fact. But
+I've been working hard on this dominant thought framework for all that time, 
+and I think I'm making progress. I've had a couple of setbacks along the way, 
+periods where the darkness ruled. Some of them come as I try out different 
+combinations of medication; trying to minimize side effects like drowsiness 
+without losing the benefit sometimes tips me over the edge for a bit. And you 
+have to wait it out because the results of a change can be temporary. But I'm
+still here. That's a win. 
