--- a/content/post/radical-openness.Rmd
+++ b/content/post/radical-openness.Rmd
@@ -14,3 +14,68 @@ tags_include:
 categories: Research
 ---
 
+A few days ago I participated in a discussion about responding to a freedom of 
+information request. The requesters wanted the formula for the model developed 
+by myself and others for a state agency. At the time, I mused that if we had
+posted all the code and data for the project on github, there'd be no need for 
+the FOI request. I was told that it was necessary to only give requesters exactly 
+what they asked for. So we did. But.
+
+# Why not make the code and data open? 
+
+The only answer seems to be to maintain 
+agency authority over the decision making process. If no one else has the 
+information, then no one else can criticize or take over the decision. But this
+is patently false. Ballot initiatives tie the hands of Agencies across the country. 
+**Make a table of ballot initiatives**
+These initiatives were not stopped by agencies keeping their data and analyses
+secret. I don't know if having the data in the open would have stopped a ballot initiative
+either, but it seems a reasonable hypothesis to try out. 
+
+Keeping the data and analyses secret provides another advantage: it hides the tradeoffs
+that decision makers are making. There are unavoidable tradeoffs in natural 
+resources management. There is no way to make all stakeholders perfectly happy. 
+If there were, then those decisions aren't going to be challenged. If an agency
+simply tells stakeholders what the decision is, then perhaps some will be 
+happy, some merely satisfied, and others outraged. But no one will be able to
+tell the extent to which their concerns were traded away to advantage someone
+else. 
+
+# Reasons to make the data and code open
+
+## Increase trust
+
+The more trust stakeholders have in an agency, the more likely they are to accept 
+a decision. **check for trust citations** Placing the code and data in the open
+should increase trust, because look ma, nothing up either sleeve! But that only
+works if it is also clear how the analyses contributed to the decision, and
+ultimately that means exposing the tradeoffs involved. 
+
+## Increase credibility
+
+Scientists are used to building credibility by exposing their work to peer review
+as part of the publishing process. But a lot of agency work doesn't get peer 
+reviewed, because it isn't really pushing science forward. Putting the data and
+code out in the open invites constructive criticism -- stakeholders can see 
+what choices were made in the analysis. In fact, they can take the data and make
+different choices and see if that affects the results. Making the work public
+will also lead to better work -- no room to be sloppy and no carpet to hide
+sketchy assumptions under. 
+
+## Expose salience
+
+The analysis should already be salient to the decision, because the work is done
+to support the decision. But it might not be obvious to stakeholders how the work
+is connected to the decision. Agencies might consider that a feature rather than 
+a bug, but I think it is something that should be fixed.
+
+## Increase legitimacy
+
+I think of legitimacy of the analysis as the "3rd rail" of the science policy
+interface -- touch it and your contribution is dead to the stakeholders. 
+
+# Conclusion
+
+I don't have rose-colored glasses on; radical openness won't make conflict with
+stakeholders go away. But I think it could change the nature of that conflict for
+the better. 
