--- a/content/post/radical-openness.Rmd
+++ b/content/post/radical-openness.Rmd
@@ -17,13 +17,13 @@ categories: Research
 A few days ago I participated in a discussion about responding to a freedom of 
 information request. The requesters wanted the formula for the model developed 
 by myself and others for a state agency. At the time, I mused that if we had
-posted all the code and data for the project on github, there'd be no need for 
-the FOI request. I was told that it was necessary to only give requesters exactly 
+posted all the code and data for the project on github, the request would be 
+redundant. I was told that it was necessary to only give requesters exactly 
 what they asked for. So we did. But.
 
 # Why not make the code and data open? 
 
-The only answer seems to be to maintain 
+I can think of one reason: maintain 
 agency authority over the decision making process. If no one else has the 
 information, then no one else can criticize or take over the decision. But this
 is patently false. Ballot initiatives tie the hands of Agencies across the country. 
@@ -32,8 +32,8 @@ These initiatives were not stopped by agencies keeping their data and analyses
 secret. I don't know if having the data in the open would have stopped a ballot initiative
 either, but it seems a reasonable hypothesis to try out. 
 
-Keeping the data and analyses secret provides another advantage: it hides the tradeoffs
-that decision makers are making. There are unavoidable tradeoffs in natural 
+Keeping the data and analyses secret provides another advantage: it hides the trade offs
+that decision makers are making. There are unavoidable trade offs in natural 
 resources management. There is no way to make all stakeholders perfectly happy. 
 If there were, then those decisions aren't going to be challenged. If an agency
 simply tells stakeholders what the decision is, then perhaps some will be 
@@ -43,13 +43,17 @@ else.
 
 # Reasons to make the data and code open
 
+I like to think about these issues in the context of a three-legged stool model
+of the science-policy interface [@buzan2005]: credibility, salience, and legitimacy. 
+All three of those are affected by how much a group of stakeholders trusts the agency.
+
 ## Increase trust
 
 The more trust stakeholders have in an agency, the more likely they are to accept 
 a decision. **check for trust citations** Placing the code and data in the open
 should increase trust, because look ma, nothing up either sleeve! But that only
 works if it is also clear how the analyses contributed to the decision, and
-ultimately that means exposing the tradeoffs involved. 
+ultimately that means exposing the trade offs involved. 
 
 ## Increase credibility
 
@@ -72,10 +76,94 @@ a bug, but I think it is something that should be fixed.
 ## Increase legitimacy
 
 I think of legitimacy of the analysis as the "3rd rail" of the science policy
-interface -- touch it and your contribution is dead to the stakeholders. 
+interface -- touch it and your contribution is dead to the stakeholders. One 
+way to increase legitimacy is to involve stakeholders in the process of defining
+the science. Opening a repository with code and data for an analysis explicitly
+provides a place for that conversation to happen. It might not be the best place,
+but something seems better than nothing. 
+
+# Managing the commons
+
+There is another lens through which we could view natural resources and the 
+value of radical openness. Elinor Ostrom won a nobel prize in economics for
+describing the conditions under which groups exploiting natural resources can self govern without
+top-down regulation. She formulated 8 design principles to follow. 
+
+## Clearly defined boundaries
+
+Boundaries refer not only to spatial boundaries, but also to who is in the 
+group and who is out of the group. Wildlife management in the USA usually 
+has clear spatial boundaries. Who is in the group is not as clearly defined.
+On the one hand, the group of people who purchase licenses or permits to
+harvest wildlife seems clear enough. But even membership in that group
+fluctuates rapidly from year to year. I bought a Nebraska fishing license in 
+2017, but not in 2018 or 2019 (yet!). Furthermore, according to law all
+the taxpayers of a state collectively "own" the fish and wildlife living 
+in the state (the public trust doctrine). For many large and charismatic 
+species (e.g. mountain lions), groups outside of a state may express strong
+opinions about management. However, a large proportion of those "with standing"
+are completely unaware or disengaged with wildlife management.
+
+Radical openness on the analytical parts of management probably contributes
+nothing to the clarity of who is in and who is out.
+
+## Proportional equivalence between benefits and costs
+
+The idea behind this principle is that obtaining benefits carries some cost. 
+For consumptive users of fish and wildlife this is true. Excise taxes on firearms, 
+ammunition, and fishing equipment support fish and wildlife management directly. 
+In addition, a license or permit must be purchased, which varies in
+cost according to the magnitude of the benefit. 
+
+However, there is little cost to non-consumptive users for extracting their
+benefits, which include viewing opportunities and existence value of game species. 
+From the perspective of consumptive users, these benefits are appropriated and
+not fairly obtained. 
+
+Non-game species benefit indirectly from management funded by consumptive use
+of game species. In the USA, taxpayers broadly fund the State Wildlife Grants program that supports
+non-game species management. Nonetheless, I value viewing opportunities for
+game species as well, and that is a benefit that I have not paid for. 
+
+## Collective choice arrangements
+
+## Monitoring
+
+## Graduated sanctions
+
+## Fast and fair conflict resolution
+
+## Local autonomy
+
+## Appropriate relations with other tiers of rule-making authority
+
+This is also called "poly-centric governance". 
+
+
 
 # Conclusion
 
 I don't have rose-colored glasses on; radical openness won't make conflict with
 stakeholders go away. But I think it could change the nature of that conflict for
 the better. 
+
+# Postscript
+
+I learned some more details about the request for information on a phone call. 
+One stakeholder group, representing fur trappers, wants a particular action to be taken. As far as I can tell,
+the action would cost the agency nothing, and the stakeholders in question are
+the only ones who would experience a (slight if not zero) negative effect. 
+Nonetheless, the agency doesn't think the action is warranted. The stakeholders 
+feel that a population of trappable animals is declining precipitously, and they
+want the population closed to trapping. The agency thinks there are very few 
+animals there (poor habitat), and there have always been few animals there. 
+Closing the population to trapping admits that the stakeholders' view is correct. 
+
+There is an opportunity here to have a different kind of conversation about
+the management. There are clearly two hypotheses: the population is declining
+because of trapping, or the population is low because of poor habitat. These
+hypotheses make very different predictions about what will happen after closing
+the management area. If trapping is the problem, then after closure the population
+will start to increase. If habitat is the problem, then after closure nothing
+will change. We could do adaptive management! 
+
